--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "actividad4lunamoranerik",
+  "name": "preentrega1lunamoranerik",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./srv/app.js"
+    "start": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
