--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "integradoralunamoranerik",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -12,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "mongoose": "^7.5.3",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.6.4",
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
-  }
+  },
+  "description": ""
 }
