--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
@@ -18,6 +19,8 @@
     "mongoose": "^7.6.4",
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2"
   },
   "description": ""
